Add team members information

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,11 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div><h1>Welcome to Phototrest</h1></div>
+        <div>
+            <h1>Welcome to Phototrest</h1>
+            <h2>Mier Ta</h2>
+            <h2>Daniel Caccamo</h2>
+            <h2>Chongchong Liu</h2>
+        </div>
     </body>
 </html>
